# mindreader

./: .clang-format  CMakeLists.txt  expert.h  format  game.h  main.cpp  pennies.h  util.cpp  util.h
lib/imgui/: CMakeLists.txt
